Add files automatically created by tex

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,28 @@ build
 tests/2-ir-gen-warmup/ta_gcd/gcd_array.ll
 Reports/5-bonus/demos/complex_num_cal
 Reports/5-bonus/demos/complex_num_cal.ll
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.nav
+*.snm
+*.mtc1
+*.out
+*.synctex.gz
